<resources>
    <string name="app_name">Custo Viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_litre">Preço por litro</string>
    <string name="range">Autonomia</string>
    <string name="km_per_litre">KM/L</string>
    <string name="total_text">Seu gasto total será de:</string>
    <string name="final_price">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="validate_fields">Preencha todos os campos!</string>

</resources>